# semiconductor-design

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  INTENT.md  Makefile  PRD.md  README.md  config.yaml  lockfile.yaml  prepare.py  program.md  pyproject.toml  train.py
.claude/: settings.json
.claude/agents/: README.md  code-author.md  eda-code-reviewer.md  experiment-designer.md  experiment-runner.md
.codex/: config.toml  hooks.json
.codex/agents/: code-author.toml  experiment-designer.toml  experiment-runner.toml
.github/workflows/: ci.yml
cdk/: .gitignore  DEPLOY.md  cdk.context.json  cdk.json  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
cdk/lib/: app-context.ts  (+1 more)
docker/: build-librelane.sh  build-metric-collector.sh  build-orfs.sh  eda-flow-runner.Dockerfile  librelane-runner.Dockerfile  metric-collector.Dockerfile  orfs-runner.Dockerfile
docs/: PAPER-OUTLINE.md  PAPER.ko.md  PAPER.md  TRAIN.md  TUTORIAL.md  eda_agent_handoff.md  glossary.md  onboarding.md
experiments/: README.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
issues/: 001-planner-crossover-algorithm.md  001-surrogate-metric-definition.md  002-fargate-spot-vs-ondemand-mix.md  002-feature-set-composition.md  003-dataset-scale-label-count.md  003-wiki-ingest-automation-trigger.md  004-dashboard-framework-decision.md  004-model-class-tabular-vs-gnn.md  005-comparison-baseline-thresholds.md  005-graphify-refresh-and-integrity-policy.md  006-eda-flow-execution-infra.md  006-showcase-rollout-publishing.md  007-gen-009-next-experiment-direction.md  007-github-repo-external-metadata.md  README.md
models/: README.md
scripts/: compute_confidence.py  graph_integrity_check.py  graphify_auto_context.py  inject_freshness.py
specs/: aes-orfs.yaml  gcd-librelane.yaml  gcd-orfs.yaml  ibex-orfs.yaml
tests/: README.md  conftest.py  test_frontmatter.py  test_graph_integrity.py  test_init_wiki.py  test_integration.py  test_lint_wiki.py  test_sanity.py  test_sync_index.py
tutorial/: 00-orientation.md  01-eda-flow.md  02-surrogate-models.md  03-autoresearch-loop.md  04-gates-and-the-wall.md  README.md
wiki/: .gitignore  adr-multiseed-median-selection.md  adr-operator-empowerment-repivot.md  autoresearch-eda-surrogate.md  clock-and-timing.md  cmos-fundamentals.md  codex-review-gate.md  cross-design-generalization.md  digital-logic-gates.md  eda-flow-report-reading.md  evolution-loop.md  frozen-contract.md  fsm-and-pipeline.md  gate-chain.md  generation-log.md  index.md  k1-alpha-llm-for-hdl-evidence.md  k1-beta-agentic-eda-evidence.md  k1-delta-research-memory-evidence.md  k1-gamma-opensource-eda-evidence.md  k2-epsilon-graph-quality-judge-evidence.md  k2-eta-patch-mutation-evidence.md  k2-theta-benchmark-license-evidence.md  k2-zeta-l1-runtime-evidence.md  log.md  pdk-file-formats.md  phase-0-eda-operator-lens.md  tutorial-project-intro.md
(+318 files in other folders)
