[project]
name = "semi-design"
version = "0.1.0"
description = "Semiconductor design research program (L1 runner + graphify knowledge graph)"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "graphifyy @ git+https://github.com/safishamsi/graphify@215b5d40e78e498100cbf8855224331c40f757d9",
]
runner = [
    "boto3>=1.34",
    "click>=8",
    "pydantic>=2,<3",
    "ulid-py>=1.1",
    "PyYAML>=6",
]

[project.scripts]
semi-run = "semi_design_runner.cli:main"
semi-metric-collector = "semi_design_runner.metric_collector_main:main"
semi-confidence = "semi_design_runner.confidence_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/semi_design_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "slow: expensive tests requiring Docker daemon (opt-in via `-m slow`)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
