[project]
name = "semi-design"
version = "0.2.0"
description = "AutoResearch-driven EDA surrogate model research (pivot 2026-05-29)"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
pipeline = [
    "boto3>=1.34",
    "pydantic>=2,<3",
]

# NOTE: 피벗 직후 skeleton 상태. [project.scripts] / wheel package target은
# src/pipeline·src/sagemaker 구현이 들어오면 구현 plan 단계에서 추가한다.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# skeleton: 아직 패키지 없음. 구현 시 ["src/pipeline", "src/sagemaker"] 등으로 갱신.
bypass-selection = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"
